[package]
name = "suji"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Suji (筋) — visual indent guides and scope highlighting for Neovim"
homepage = "https://github.com/pleme-io/suji"
repository = "https://github.com/pleme-io/suji"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "indent", "guides", "scope"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.5", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
kigi = { path = "../kigi", version = "0.1.0" }
